[TD-272] 가게 상세 조회에 대한 컨트롤러 테스트 수정