@@ -23,13 +23,18 @@ import com.depromeet.threedollar.domain.domain.user.UserSocialType;
 import com.depromeet.threedollar.domain.domain.visit.VisitHistoryCreator;
 import com.depromeet.threedollar.domain.domain.visit.VisitHistoryRepository;
 import com.depromeet.threedollar.domain.domain.visit.VisitType;
+import org.javaunit.autoparams.AutoSource;
 import org.junit.jupiter.api.*;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.depromeet.threedollar.common.exception.ErrorCode.NOT_FOUND_STORE_EXCEPTION;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -76,17 +81,15 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
     @Nested
     class 사용자_주변의_가게_조회 {
 
-        @Test
-        void 사용자_주변의_가게들을_조회한다() throws Exception {
+        @AutoSource
+        @ParameterizedTest
+        void 사용자_주변의_가게들을_조회한다(String storeName1, String storeName2) throws Exception {
             // given
-            Store store1 = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            Menu menu1 = MenuCreator.create(store1, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            Menu menu2 = MenuCreator.create(store1, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG);
-            Menu menu3 = MenuCreator.create(store1, "메뉴3", "가격3", MenuCategoryType.EOMUK);
-            store1.addMenus(Arrays.asList(menu1, menu2, menu3));
+            Store store1 = StoreCreator.create(testUser.getId(), storeName1, 34, 124);
+            store1.addMenus(List.of(MenuCreator.create(store1, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG)));
 
-            Store store2 = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
+            Store store2 = StoreCreator.create(testUser.getId(), storeName2, 34, 124);
+            store2.addMenus(List.of(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.saveAll(Arrays.asList(store1, store2));
 
             RetrieveNearStoresRequest request = RetrieveNearStoresRequest.testInstance(34, 124, 34, 124, 1000);
@@ -96,22 +99,38 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
 
             // then
             assertThat(response.getData()).hasSize(2);
-            assertStoreInfoResponse(response.getData().get(0), store1.getId(), store1.getLatitude(), store1.getLongitude(), store1.getName(), store1.getRating());
-            assertThat(response.getData().get(0).getCategories()).hasSize(2);
-            assertThat(response.getData().get(0).getCategories().get(0)).isEqualTo(MenuCategoryType.BUNGEOPPANG);
-            assertThat(response.getData().get(0).getCategories().get(1)).isEqualTo(MenuCategoryType.EOMUK);
+            assertStoreInfoResponse(response.getData().get(0), store1.getId(), store1.getLatitude(), store1.getLongitude(), storeName1, store1.getRating());
+            assertStoreInfoResponse(response.getData().get(1), store2.getId(), store2.getLatitude(), store2.getLongitude(), storeName2, store2.getRating());
+        }
 
-            assertStoreInfoResponse(response.getData().get(1), store2.getId(), store2.getLatitude(), store2.getLongitude(), store2.getName(), store2.getRating());
-            assertThat(response.getData().get(1).getCategories()).hasSize(1);
-            assertThat(response.getData().get(1).getCategories().get(0)).isEqualTo(MenuCategoryType.BUNGEOPPANG);
+        @AutoSource
+        @ParameterizedTest
+        void 사용자_주변의_가게_조회시_카테고리도_함께_조회한다(Set<MenuCategoryType> menuCategories) throws Exception {
+            // given
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            List<Menu> menus = menuCategories.stream()
+                .map(category -> MenuCreator.create(store, "메뉴 정보", "가격 정보", category))
+                .collect(Collectors.toList());
+            store.addMenus(menus);
+            storeRepository.save(store);
+
+            RetrieveNearStoresRequest request = RetrieveNearStoresRequest.testInstance(34, 124, 34, 124, 1000);
+
+            // when
+            ApiResponse<List<StoreInfoResponse>> response = storeRetrieveMockApiCaller.getNearStores(request, 200);
+
+            // then
+            assertThat(response.getData()).hasSize(1);
+
+            assertThat(response.getData().get(0).getCategories()).hasSize(menuCategories.size());
+            assertThat(response.getData().get(0).getCategories()).containsExactlyInAnyOrderElementsOf(menuCategories);
         }
 
         @Test
         void 사용자_주위의_가게를_조회시_삭제된_가게는_조회되지_않는다() throws Exception {
             // given
-            Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(List.of(menu));
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
             store.delete();
             storeRepository.save(store);
 
@@ -125,18 +144,16 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
         }
 
         @Test
-        void 사용자_주위의_가게를_조회할때_방문_인증_횟수가_함께_조회된다() throws Exception {
+        void 사용자_주위의_가게를_조회할때_방문_인증_정보가_함께_조회된다() throws Exception {
             // given
-            Store store1 = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            store1.addMenus(List.of(MenuCreator.create(store1, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG)));
-
-            Store store2 = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            store2.addMenus(List.of(MenuCreator.create(store2, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
-            storeRepository.saveAll(Arrays.asList(store1, store2));
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
+            storeRepository.save(store);
 
             visitHistoryRepository.saveAll(List.of(
-                VisitHistoryCreator.create(store1, testUser.getId(), VisitType.EXISTS, LocalDate.of(2021, 10, 18)),
-                VisitHistoryCreator.create(store2, 100L, VisitType.NOT_EXISTS, LocalDate.of(2021, 10, 18))
+                VisitHistoryCreator.create(store, testUser.getId(), VisitType.NOT_EXISTS, LocalDate.of(2021, 10, 17)),
+                VisitHistoryCreator.create(store, testUser.getId(), VisitType.EXISTS, LocalDate.of(2021, 10, 18)),
+                VisitHistoryCreator.create(store, testUser.getId(), VisitType.EXISTS, LocalDate.of(2021, 10, 19))
             ));
 
             RetrieveNearStoresRequest request = RetrieveNearStoresRequest.testInstance(34, 124, 34, 124, 1000);
@@ -145,9 +162,8 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             ApiResponse<List<StoreInfoResponse>> response = storeRetrieveMockApiCaller.getNearStores(request, 200);
 
             // then
-            assertThat(response.getData()).hasSize(2);
-            assertVisitHistoryInfoResponse(response.getData().get(0).getVisitHistory(), 1, 0, true);
-            assertVisitHistoryInfoResponse(response.getData().get(1).getVisitHistory(), 0, 1, false);
+            assertThat(response.getData()).hasSize(1);
+            assertVisitHistoryInfoResponse(response.getData().get(0).getVisitHistory(), 2, 1, true);
         }
 
     }
@@ -156,13 +172,13 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
     @Nested
     class 특정_가게_상세_정보_조회 {
 
-        @Test
-        void 특정_가게에_대한_상세_정보를_조회한다() throws Exception {
+        @AutoSource
+        @ParameterizedTest
+        void 특정_가게에_대한_상세_정보를_조회할떄_가게에_대한_정보가_반환된다(String storeName, StoreType storeType) throws Exception {
             // given
-            Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-
+            Store store = StoreCreator.create(testUser.getId(), storeName, storeType,34, 124);
             Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(Collections.singletonList(menu));
+            store.addMenus(List.of(menu));
 
             DayOfTheWeek day = DayOfTheWeek.FRIDAY;
             store.addAppearanceDays(Collections.singleton(day));
@@ -179,21 +195,85 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
 
             // then
             StoreDetailResponse data = response.getData();
-            assertStoreDetailInfoResponse(data, store.getId(), store.getLatitude(), store.getLongitude(), store.getName(), store.getType(), store.getRating());
+            assertStoreDetailInfoResponse(data, store.getId(), store.getLatitude(), store.getLongitude(), storeName, storeType, store.getRating());
+        }
 
-            assertThat(data.getCategories()).hasSize(1);
-            assertThat(data.getCategories().get(0)).isEqualTo(menu.getCategory());
+        @Test
+        void 특정_가게에_대한_상세_정보를_조회할때_메뉴에_대한_정보가_반환된다() throws Exception {
+            // given
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            Menu menu1 = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
+            Menu menu2 = MenuCreator.create(store, "메뉴2", "가격2", MenuCategoryType.GUKWAPPANG);
+            store.addMenus(List.of(menu1, menu2));
+            storeRepository.save(store);
 
-            assertThat(data.getMenus()).hasSize(1);
-            assertMenuResponse(data.getMenus().get(0), menu.getId(), menu.getCategory(), menu.getName(), menu.getPrice());
+            RetrieveStoreDetailInfoRequest request = RetrieveStoreDetailInfoRequest.testInstance(store.getId(), 34.0, 124.0);
 
-            assertUserInfoResponse(data.getUser(), testUser.getId(), testUser.getName(), testUser.getSocialType());
+            // when
+            ApiResponse<StoreDetailResponse> response = storeRetrieveMockApiCaller.getStoreDetailInfo(request, 200);
 
-            assertThat(data.getAppearanceDays()).hasSize(1);
-            assertThat(data.getAppearanceDays().contains(day)).isTrue();
+            // then
+            assertThat(response.getData().getCategories()).containsExactlyInAnyOrderElementsOf(List.of(MenuCategoryType.BUNGEOPPANG, MenuCategoryType.GUKWAPPANG));
 
-            assertThat(data.getPaymentMethods()).hasSize(1);
-            assertThat(data.getPaymentMethods().contains(paymentMethodType)).isTrue();
+            assertThat(response.getData().getMenus()).hasSize(2);
+            assertMenuResponse(response.getData().getMenus().get(0), menu1.getId(), menu1.getCategory(), menu1.getName(), menu1.getPrice());
+            assertMenuResponse(response.getData().getMenus().get(1), menu2.getId(), menu2.getCategory(), menu2.getName(), menu2.getPrice());
+        }
+
+        @Test
+        void 특정_가게에_대한_상세_정보를_조회할떄_제보자_정보도_함께_반환된다() throws Exception {
+            // given
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of( MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
+            storeRepository.save(store);
+
+            RetrieveStoreDetailInfoRequest request = RetrieveStoreDetailInfoRequest.testInstance(store.getId(), 34.0, 124.0);
+
+            // when
+            ApiResponse<StoreDetailResponse> response = storeRetrieveMockApiCaller.getStoreDetailInfo(request, 200);
+
+            // then
+            assertUserInfoResponse(response.getData().getUser(), testUser.getId(), testUser.getName(), testUser.getSocialType());
+        }
+
+        @AutoSource
+        @ParameterizedTest
+        void 특정_가게에_대한_상세_정보를_조회할떄_개장일_정보도_반환된다(Set<DayOfTheWeek> dayOfTheWeeks) throws Exception {
+            // given
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
+
+            store.addAppearanceDays(dayOfTheWeeks);
+            storeRepository.save(store);
+
+            RetrieveStoreDetailInfoRequest request = RetrieveStoreDetailInfoRequest.testInstance(store.getId(), 34.0, 124.0);
+
+            // when
+            ApiResponse<StoreDetailResponse> response = storeRetrieveMockApiCaller.getStoreDetailInfo(request, 200);
+
+            // then
+            assertThat(response.getData().getAppearanceDays()).hasSize(dayOfTheWeeks.size());
+            assertThat(response.getData().getAppearanceDays()).containsExactlyInAnyOrderElementsOf(dayOfTheWeeks);
+        }
+
+        @AutoSource
+        @ParameterizedTest
+        void 특정_가게에_대한_상세_정보를_조회할때_결제방법_정보도_반환된다(Set<PaymentMethodType> paymentMethodTypes) throws Exception {
+            // given
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
+
+            store.addPaymentMethods(paymentMethodTypes);
+            storeRepository.save(store);
+
+            RetrieveStoreDetailInfoRequest request = RetrieveStoreDetailInfoRequest.testInstance(store.getId(), 34.0, 124.0);
+
+            // when
+            ApiResponse<StoreDetailResponse> response = storeRetrieveMockApiCaller.getStoreDetailInfo(request, 200);
+
+            // then
+            assertThat(response.getData().getPaymentMethods()).hasSize(paymentMethodTypes.size());
+            assertThat(response.getData().getPaymentMethods()).containsExactlyInAnyOrderElementsOf(paymentMethodTypes);
         }
 
         @Test
@@ -201,7 +281,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             // given
             Long notFoundUserId = -1L;
 
-            Store store = StoreCreator.create(notFoundUserId, "storeName", 34, 124);
+            Store store = StoreCreator.create(notFoundUserId, "가게 이름", 34, 124);
             store.addMenus(Collections.singletonList(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.save(store);
 
@@ -216,16 +296,16 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
         }
 
         @Test
-        void 가게에_작성된_리뷰_와_작성자_정보가_최근_생성된_순서로_조회되고_회원탈퇴한_유저는_사라진_제보자로_표기된다() throws Exception {
+        void 가게_상세조회시_작성된_리뷰_와_작성자_정보가_함께_최근_생성된_순서로_조회된다() throws Exception {
             // given
-            Long anotherUserId = Long.MAX_VALUE;
+            Long notFoundUserId = Long.MAX_VALUE;
 
-            Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
             store.addMenus(Collections.singletonList(MenuCreator.create(store, "붕어빵", "만원", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.save(store);
 
             Review review1 = ReviewCreator.create(store.getId(), testUser.getId(), "댓글 1", 5);
-            Review review2 = ReviewCreator.create(store.getId(), anotherUserId, "댓글 2", 3);
+            Review review2 = ReviewCreator.create(store.getId(), notFoundUserId, "댓글 2", 3);
 
             reviewRepository.saveAll(Arrays.asList(review1, review2));
 
@@ -245,7 +325,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
         }
 
         @Test
-        void 존재하지_않는_가게인경우_NOTFOUND_404_NOT_FOUND() throws Exception {
+        void 가게_상세_조회시_존재하지_않는_가게인경우_404_NOT_FOUND() throws Exception {
             // given
             Long notFoundStoreId = -1L;
             RetrieveStoreDetailInfoRequest request = RetrieveStoreDetailInfoRequest.testInstance(notFoundStoreId, 34.0, 124.0);
@@ -277,10 +357,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             Store store3 = StoreCreator.create(testUser.getId(), "가게3", 34, 124);
             store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴3", "가격3", MenuCategoryType.BUNGEOPPANG)));
 
-            Store store4 = StoreCreator.create(testUser.getId(), "가게3", 34, 124);
-            store4.addMenus(Collections.singletonList(MenuCreator.create(store4, "메뉴4", "가격4", MenuCategoryType.BUNGEOPPANG)));
-
-            storeRepository.saveAll(Arrays.asList(store1, store2, store3, store4));
+            storeRepository.saveAll(List.of(store1, store2, store3));
 
             RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(2, null, null, null, null);
 
@@ -288,11 +365,12 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             ApiResponse<StoresScrollResponse> response = storeRetrieveMockApiCaller.getMyStores(request, token, 200);
 
             // then
-            assertThat(response.getData().getTotalElements()).isEqualTo(4);
-            assertThat(response.getData().getNextCursor()).isEqualTo(store3.getId());
+            assertThat(response.getData().getTotalElements()).isEqualTo(3);
+            assertThat(response.getData().getNextCursor()).isEqualTo(store2.getId());
             assertThat(response.getData().getContents()).hasSize(2);
-            assertStoreInfoResponse(response.getData().getContents().get(0), store4);
-            assertStoreInfoResponse(response.getData().getContents().get(1), store3);
+
+            assertStoreInfoResponse(response.getData().getContents().get(0), store3);
+            assertStoreInfoResponse(response.getData().getContents().get(1), store2);
         }
 
         @Test
@@ -326,33 +404,35 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
         }
 
         @Test
-        void 중간_페이지_조회시_다음_커서가_반환된다_총개수가_캐싱되지_않으면_계산되서_반환() throws Exception {
+        void 유저가_작성한_가게_조회시_총개수가_캐싱되지_않으면_계산되서_반환() throws Exception {
             // given
-            Store store1 = StoreCreator.create(testUser.getId(), "가게1", 34, 124);
-            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG)));
+            Store store = StoreCreator.create(testUser.getId(), "가게1", 34, 124);
+            store.addMenus(Collections.singletonList(MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG)));
+            storeRepository.save(store);
 
-            Store store2 = StoreCreator.create(testUser.getId(), "가게2", 34, 124);
-            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
-
-            Store store3 = StoreCreator.create(testUser.getId(), "가게3", 34, 124);
-            store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴3", "가격3", MenuCategoryType.BUNGEOPPANG)));
-
-            Store store4 = StoreCreator.create(testUser.getId(), "가게3", 34, 124);
-            store4.addMenus(Collections.singletonList(MenuCreator.create(store4, "메뉴4", "가격4", MenuCategoryType.BUNGEOPPANG)));
-
-            storeRepository.saveAll(Arrays.asList(store1, store2, store3, store4));
-
-            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(2, store4.getId(), null, 33.0, 123.0);
+            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(1, null, null, 33.0, 123.0);
 
             // when
             ApiResponse<StoresScrollResponse> response = storeRetrieveMockApiCaller.getMyStores(request, token, 200);
 
             // then
-            assertThat(response.getData().getTotalElements()).isEqualTo(4);
-            assertThat(response.getData().getNextCursor()).isEqualTo(store2.getId());
-            assertThat(response.getData().getContents()).hasSize(2);
-            assertStoreInfoResponse(response.getData().getContents().get(0), store3);
-            assertStoreInfoResponse(response.getData().getContents().get(1), store2);
+            assertThat(response.getData().getTotalElements()).isEqualTo(1);
+        }
+
+        @Test
+        void 유저가_작성한_가게_조회시_총개수가_캐싱되면_따로_계산하지_않고_반환() throws Exception {
+            // given
+            Store store = StoreCreator.create(testUser.getId(), "가게1", 34, 124);
+            store.addMenus(Collections.singletonList(MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG)));
+            storeRepository.save(store);
+
+            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(1, null, 10L, 33.0, 123.0);
+
+            // when
+            ApiResponse<StoresScrollResponse> response = storeRetrieveMockApiCaller.getMyStores(request, token, 200);
+
+            // then
+            assertThat(response.getData().getTotalElements()).isEqualTo(10);
         }
 
         @DisplayName("마지막 페이지인경우 nextCursor = -1")
@@ -365,25 +445,17 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             Store store2 = StoreCreator.create(testUser.getId(), "가게2", 34, 124);
             store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
 
-            Store store3 = StoreCreator.create(testUser.getId(), "가게3", 34, 124);
-            store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴3", "가격3", MenuCategoryType.BUNGEOPPANG)));
+            storeRepository.saveAll(List.of(store1, store2));
 
-            Store store4 = StoreCreator.create(testUser.getId(), "가게3", 34, 124);
-            store4.addMenus(Collections.singletonList(MenuCreator.create(store4, "메뉴4", "가격4", MenuCategoryType.BUNGEOPPANG)));
-
-            storeRepository.saveAll(Arrays.asList(store1, store2, store3, store4));
-
-            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(2, store3.getId(), null, null, null);
+            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(1, store2.getId(), null, null, null);
 
             // when
             ApiResponse<StoresScrollResponse> response = storeRetrieveMockApiCaller.getMyStores(request, token, 200);
 
             // then
-            assertThat(response.getData().getTotalElements()).isEqualTo(4);
             assertThat(response.getData().getNextCursor()).isEqualTo(-1);
-            assertThat(response.getData().getContents()).hasSize(2);
-            assertStoreInfoResponse(response.getData().getContents().get(0), store2);
-            assertStoreInfoResponse(response.getData().getContents().get(1), store1);
+            assertThat(response.getData().getTotalElements()).isEqualTo(2);
+            assertThat(response.getData().getContents()).hasSize(1);
         }
 
         @DisplayName("마지막 페이지인경우 nextCursor = -1")
@@ -407,18 +479,17 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             ApiResponse<StoresScrollResponse> response = storeRetrieveMockApiCaller.getMyStores(request, token, 200);
 
             // then
-            assertThat(response.getData().getTotalElements()).isEqualTo(3);
             assertThat(response.getData().getNextCursor()).isEqualTo(-1);
+            assertThat(response.getData().getTotalElements()).isEqualTo(3);
             assertThat(response.getData().getContents()).hasSize(1);
             assertStoreInfoResponse(response.getData().getContents().get(0), store1);
         }
 
         @Test
-        void 삭제된_가게는_조회되지_않는다() throws Exception {
+        void 내가_작성한_가게_조회시_삭제된_가게는_조회되지_않는다() throws Exception {
             // given
-            Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(List.of(menu));
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
             store.delete();
             storeRepository.save(store);
 
@@ -436,23 +507,24 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
         @Test
         void 사용자가_제보한_가게들_조회시_방문_횟수도_함께_조회된다() throws Exception {
             // given
-            Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(List.of(menu));
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴", "가격", MenuCategoryType.BUNGEOPPANG)));
             storeRepository.save(store);
 
-            visitHistoryRepository.save(VisitHistoryCreator.create(store, testUser.getId(), VisitType.NOT_EXISTS, LocalDate.of(2021, 10, 18)));
+            visitHistoryRepository.saveAll(List.of(
+                VisitHistoryCreator.create(store, testUser.getId(), VisitType.EXISTS, LocalDate.of(2021, 10, 15)),
+                VisitHistoryCreator.create(store, testUser.getId(), VisitType.NOT_EXISTS, LocalDate.of(2021, 10, 16)),
+                VisitHistoryCreator.create(store, testUser.getId(), VisitType.NOT_EXISTS, LocalDate.of(2021, 10, 17)))
+            );
 
-            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(2, null, null, null, null);
+            RetrieveMyStoresRequest request = RetrieveMyStoresRequest.testInstance(1, null, null, null, null);
 
             // when
             ApiResponse<StoresScrollResponse> response = storeRetrieveMockApiCaller.getMyStores(request, token, 200);
 
             // then
-            assertThat(response.getData().getTotalElements()).isEqualTo(1);
-            assertThat(response.getData().getNextCursor()).isEqualTo(-1);
             assertThat(response.getData().getContents()).hasSize(1);
-            assertVisitHistoryInfoResponse(response.getData().getContents().get(0).getVisitHistory(), 0, 1, false);
+            assertVisitHistoryInfoResponse(response.getData().getContents().get(0).getVisitHistory(), 1, 2, false);
         }
 
     }
@@ -461,19 +533,20 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
     @Nested
     class 가게_리스트_거리수_그룹화_조회 {
 
-        @Test
-        void 특정_카테고리의_가게_리스트를_리뷰_평가_점수로_그룹화해서_보여준다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 특정_카테고리의_가게_리스트를_거리수를_그룹화해서_보여준다(MenuCategoryType menuCategoryType) throws Exception {
             // given
             Store store1 = StoreCreator.create(testUser.getId(), "가게1", 34.0001, 124, 1);
-            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", menuCategoryType)));
 
             Store store2 = StoreCreator.create(testUser.getId(), "가게1", 34.001, 124, 1);
-            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", menuCategoryType)));
 
             storeRepository.saveAll(Arrays.asList(store1, store2));
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -483,6 +556,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             // when
             ApiResponse<StoresGroupByDistanceResponse> response = storeRetrieveMockApiCaller.getStoresByDistance(request, 200);
 
+            // then
             assertThat(response.getData().getStoreList50()).hasSize(1);
             assertThat(response.getData().getStoreList50().get(0).getStoreId()).isEqualTo(store1.getId());
 
@@ -495,19 +569,20 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreListOver1000()).isEmpty();
         }
 
-        @Test
-        void 같은_그룹내에서_거리가_가까운_순서대로_조회된다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 같은_그룹내에서_거리가_가까운_순서대로_조회된다(MenuCategoryType menuCategoryType) throws Exception {
             // given
             Store store1 = StoreCreator.create(testUser.getId(), "가게1", 34.00015, 124, 1);
-            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", menuCategoryType)));
 
             Store store2 = StoreCreator.create(testUser.getId(), "가게1", 34.0001, 124, 1);
-            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", menuCategoryType)));
 
             storeRepository.saveAll(Arrays.asList(store1, store2));
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -517,6 +592,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             // when
             ApiResponse<StoresGroupByDistanceResponse> response = storeRetrieveMockApiCaller.getStoresByDistance(request, 200);
 
+            // then
             assertThat(response.getData().getStoreList50()).hasSize(2);
             assertThat(response.getData().getStoreList50().get(0).getStoreId()).isEqualTo(store2.getId());
             assertThat(response.getData().getStoreList50().get(1).getStoreId()).isEqualTo(store1.getId());
@@ -552,17 +628,17 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreListOver1000()).isEmpty();
         }
 
-        @Test
-        void 삭제된_가게는_조회되지_않는다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 삭제된_가게는_조회되지_않는다(MenuCategoryType menuCategoryType) throws Exception {
             // given
-            Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(List.of(menu));
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124);
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴1", "가격1", menuCategoryType)));
             store.delete();
             storeRepository.save(store);
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -580,17 +656,17 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreListOver1000()).isEmpty();
         }
 
-        @Test
-        void 거리순으로_내_주변의_특정_카테고리_가게_조회시_방문_정보도_함께_조회된다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 거리순으로_내_주변의_특정_카테고리_가게_조회시_방문_정보도_함께_조회된다(MenuCategoryType menuCategoryType) throws Exception {
             // given
-            Store store = StoreCreator.create(testUser.getId(), "가게 1.1", 34, 124, 1.1);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(List.of(menu));
+            Store store = StoreCreator.create(testUser.getId(), "가게 이름", 34, 124, 1.1);
+            store.addMenus(List.of( MenuCreator.create(store, "메뉴", "가격", menuCategoryType)));
             storeRepository.save(store);
             visitHistoryRepository.save(VisitHistoryCreator.create(store, testUser.getId(), VisitType.EXISTS, LocalDate.of(2021, 10, 18)));
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -600,6 +676,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             // when
             ApiResponse<StoresGroupByDistanceResponse> response = storeRetrieveMockApiCaller.getStoresByDistance(request, 200);
 
+            // then
             assertThat(response.getData().getStoreList50()).hasSize(1);
             assertVisitHistoryInfoResponse(response.getData().getStoreList50().get(0).getVisitHistory(), 1, 0, true);
         }
@@ -610,28 +687,29 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
     @Nested
     class 가게_리스트_리뷰_평가_점수_그룹화_조회 {
 
-        @Test
-        void 특정_카테고리의_가게_리스트를_리뷰_평가_점수로_그룹화해서_보여준다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 특정_카테고리의_가게_리스트를_리뷰_평가_점수로_그룹화해서_보여준다(MenuCategoryType menuCategoryType) throws Exception {
             // given
             Store store1 = StoreCreator.create(testUser.getId(), "가게1", 34, 124, 1);
-            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", menuCategoryType)));
 
             Store store2 = StoreCreator.create(testUser.getId(), "가게2", 34, 124, 2);
-            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", menuCategoryType)));
 
             Store store3 = StoreCreator.create(testUser.getId(), "가게3", 34, 124, 3);
-            store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴2", "가격2", menuCategoryType)));
 
             Store store4 = StoreCreator.create(testUser.getId(), "가게4", 34, 124, 4);
-            store4.addMenus(Collections.singletonList(MenuCreator.create(store4, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store4.addMenus(Collections.singletonList(MenuCreator.create(store4, "메뉴2", "가격2", menuCategoryType)));
 
             Store store5 = StoreCreator.create(testUser.getId(), "가게5", 34, 124, 5);
-            store5.addMenus(Collections.singletonList(MenuCreator.create(store5, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG)));
+            store5.addMenus(Collections.singletonList(MenuCreator.create(store5, "메뉴1", "가격1", menuCategoryType)));
 
             storeRepository.saveAll(Arrays.asList(store1, store2, store3, store4, store5));
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -656,22 +734,23 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreList4().get(1).getStoreId()).isEqualTo(store4.getId());
         }
 
-        @Test
-        void 같은_그룹내에서_높은_리뷰부터_보여진다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 같은_그룹내에서_높은_리뷰부터_보여진다(MenuCategoryType menuCategoryType) throws Exception {
             // given
             Store store1 = StoreCreator.create(testUser.getId(), "가게 1.1", 34, 124, 1.1);
-            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store1.addMenus(Collections.singletonList(MenuCreator.create(store1, "메뉴2", "가격2", menuCategoryType)));
 
             Store store2 = StoreCreator.create(testUser.getId(), "가게 1.5", 34, 124, 1.5);
-            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store2.addMenus(Collections.singletonList(MenuCreator.create(store2, "메뉴2", "가격2", menuCategoryType)));
 
             Store store3 = StoreCreator.create(testUser.getId(), "가게 1.9", 34, 124, 1.9);
-            store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴2", "가격2", MenuCategoryType.BUNGEOPPANG)));
+            store3.addMenus(Collections.singletonList(MenuCreator.create(store3, "메뉴2", "가격2", menuCategoryType)));
 
             storeRepository.saveAll(Arrays.asList(store1, store2, store3));
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -717,17 +796,18 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreList4()).isEmpty();
         }
 
-        @Test
-        void 삭제된_가게는_조회되지_않는다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 삭제된_가게는_조회되지_않는다(MenuCategoryType menuCategoryType) throws Exception {
             // given
             Store store = StoreCreator.create(testUser.getId(), "storeName", 34, 124);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
+            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", menuCategoryType);
             store.addMenus(List.of(menu));
             store.delete();
             storeRepository.save(store);
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -744,17 +824,17 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreList4()).isEmpty();
         }
 
-        @Test
-        void 리뷰순으로_내_주변의_특정_카테고리_가게_조회시_방문_정보도_함께_조회된다() throws Exception {
+        @EnumSource
+        @ParameterizedTest
+        void 리뷰순으로_내_주변의_특정_카테고리_가게_조회시_방문_정보도_함께_조회된다(MenuCategoryType menuCategoryType) throws Exception {
             // given
             Store store = StoreCreator.create(testUser.getId(), "가게 1.1", 34, 124, 1.1);
-            Menu menu = MenuCreator.create(store, "메뉴1", "가격1", MenuCategoryType.BUNGEOPPANG);
-            store.addMenus(List.of(menu));
+            store.addMenus(List.of(MenuCreator.create(store, "메뉴1", "가격1", menuCategoryType)));
             storeRepository.save(store);
             visitHistoryRepository.save(VisitHistoryCreator.create(store, testUser.getId(), VisitType.NOT_EXISTS, LocalDate.of(2021, 10, 18)));
 
             RetrieveStoreGroupByCategoryRequest request = RetrieveStoreGroupByCategoryRequest.testBuilder()
-                .category(MenuCategoryType.BUNGEOPPANG)
+                .category(menuCategoryType)
                 .latitude(34.0)
                 .longitude(124.0)
                 .mapLatitude(34.0)
@@ -768,6 +848,7 @@ class StoreRetrieveControllerTest extends SetupUserControllerTest {
             assertThat(response.getData().getStoreList1()).hasSize(1);
             assertVisitHistoryInfoResponse(response.getData().getStoreList1().get(0).getVisitHistory(), 0, 1, false);
         }
+
     }
 
     private void assertReviewWithWriterResponse(ReviewWithWriterResponse response, Review review) {
